# resurg

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  ABBREVIATIONS.md  CMakeLists.txt  LICENSE  MACRO&COMPTIME.md  Makefile  PROMPTS.md  README.md  ROADMAP.md  STDLIB_PROPOSAL.md  TYPED_TREE.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/internal/: TYPED_TREE.md
docs/spec/: README.md
driver/: main.c
examples/: README.md
include/rsg/: cgen.h  codegen.h  compiler.h  lexer.h  lowering.h  parser.h  sema.h
lib/core/: common.h
runtime/: rsg_char.c  rsg_char.h  rsg_fmt.c  rsg_fmt.h  rsg_fn.h  rsg_fs.c  rsg_fs.h  rsg_gc.c  rsg_gc.h  rsg_internal.h  rsg_io.c  rsg_io.h  rsg_math.c  rsg_math.h  rsg_os.c  rsg_os.h  rsg_panic.c  rsg_panic.h  rsg_path.c  rsg_path.h  rsg_prim.c  rsg_prim.h  rsg_rand.c  rsg_rand.h  rsg_runtime.c  rsg_runtime.h  rsg_slice.c  rsg_slice.h  rsg_sort.c  rsg_sort.h  rsg_str.c  rsg_str.h  rsg_strmod.c  rsg_strmod.h  rsg_testing.c  rsg_testing.h  rsg_time.c  rsg_time.h  runtime.c  runtime.h
runtime/collections/: README.md
runtime/error/: README.md
runtime/memory/: README.md
src/: ast.c  ast.h  code_generator.c  code_generator.h  codegen.c  codegen.h  common.c  common.h  lexer.c  lexer.h  lowering.c  lowering.h  main.c  parser.c  parser.h  sema.c  sema.h  semantic_analyzer.c  semantic_analyzer.h  token.c  token.h  tt.c  tt.h  types.c  types.h
src/ast/: ast.c  ast.h
src/codegen/: _codegen.h  expression.c  file.c  helpers.c  internal.h  statement.c  types.c
src/compiler/: compiler.c
src/core/: arena.c  arena.h  buf.c  buf.h  builtin_registry.c  builtin_registry.h  common.c  common.h  diag.c  diag.h  diag_render.c  hash_table.c  hash_table.h  intrinsic.c  intrinsic.h  module_graph.c  module_graph.h  token.c  token.h
src/driver/: main.c  pipeline.c
src/lexer/: _lexer.h  lexer.c  lexer.h  scan_string.c
src/lowering/: _lowering.h  lower_collect.c  lower_decl.c  lower_expr.c  lower_helpers.c  lower_match.c  lower_stmt.c  lower_string.c  lowering.h
src/parser/: _parser.h  declaration.c  expression.c  helpers.c  parse_decl.c  parse_expr.c  parse_helpers.c  parse_stmt.c  parse_type.c  statement.c  types.c
src/repr/: ast.c  ast.h  ast_dump.c  ast_visitor.c  ast_visitor.h  hir.c  hir.h  hir_dump.c  hir_visitor.c  hir_visitor.h  types.c  types.h
src/sema/: _sema.h  check.c  expression.c  resolve.c  scope.c  sema_check.c  sema_expr.c  sema_resolve.c  sema_scope.c  sema_stmt.c  statement.c
src/types/: tt.c  tt.h  tt_passes.c  tt_passes.h  type_tree.c  type_tree.h  types.c  types.h
std/: builtin.rsg  conv.rsg  fmt.rsg  fs.rsg  io.rsg  math.rsg  os.rsg  path.rsg  prelude.rsg  rand.rsg  sort.rsg  testing.rsg  time.rsg
std/builtin/: convert.rsg  io.rsg  ops.rsg  types.rsg
tests/: TESTING.md  run_all_tests.ps1  run_test.ps1  run_test.sh  run_tests.py
tests/benchmark/: README.md
tests/errors/: continue_outside_loop.rsg  implicit_arg_conversion.rsg  implicit_float_conversion.rsg  implicit_int_conversion.rsg  implicit_sign_conversion.rsg  reserved_identifier.rsg  reserved_keyword.rsg  unknown_type.rsg
tests/lsp/: test_lsp.py
tests/runtime_errors/: assert_failure.rsg
tests/unit/: README.md
tests/v0.1.0/: assert_and_comments.rsg  control_flow.rsg  functions.rsg  integration.rsg  modules.rsg  operators.rsg  primitives.rsg  strings.rsg  variables.rsg
tests/v0.2.0/: arrays.rsg  char_type.rsg  explicit_annotations.rsg  f32_type.rsg  integer_types.rsg  tuples.rsg  (+3 more)
(+527 files in other folders)
